<resources>
    <string name="app_name">Moviender</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="movie_init_hit">Rate some of the movies below</string>
    <string name="ready_button">Ready! %d/%d</string>

    <!-- Genres -->
    <string name="genre_action">Action</string>
    <string name="genre_adventure">Adventure</string>
    <string name="genre_animations">Animation</string>
    <string name="genre_comedy">Comedy</string>
    <string name="genre_crime">Crime</string>
    <string name="genre_documentary">Documentary</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_family">Family</string>
    <string name="genre_fantasy">Fantasy</string>
    <string name="genre_history">History</string>
    <string name="genre_horror">Horror</string>
    <string name="genre_music">Music</string>
    <string name="genre_mystery">Mystery</string>
    <string name="genre_romance">Romance</string>
    <string name="genre_science_fiction">Sci-Fi</string>
    <string name="genre_tv_movie">TV Movie</string>
    <string name="genre_thriller">Thriller</string>
    <string name="genre_war">War</string>
    <string name="genre_western">Western</string>
    <string name="genre_recommendations">Recommendations</string>

    <string name="navigation_movies">Movies</string>
    <string name="search_action">Search</string>
    <string name="title">Title…</string>
    <string name="movies_fragment_appbar_title">Movies</string>
    <string name="add_new_friend_description">Add new friend</string>
    <string name="profile_title">Friend list</string>
    <string name="hint_username">Username</string>

    <string name="dialog_add_friend">Add friend</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_username_error_message">Username not found</string>
    <string name="dialog_exists_error_message">User already in the list</string>
    <string name="friend_request_pending">Pending…</string>
    <string name="accept_request">Accept</string>
    <string name="decline_request">Decline</string>
    <string name="friend_delete_action_title">Delete</string>
    <string name="same_uid_error_message">You silly!</string>
    <string name="navigation_friends">Friends</string>
    <string name="start_session">Start session</string>
    <string name="genre_selection_start">Start</string>
    <string name="genre_selection_info">What kind of movie do you want to see?</string>
    <string name="join_session">Join session</string>

    <string name="movie_release_date">Release date: %1$s</string>
    <string name="movie_vote_average">TMDB: %1$.1f/10</string>
    <string name="movie_overview">Overview: %1$s</string>
    <string name="movie_genres">Genres: %1$s</string>
    <string name="send_votes">Send</string>
    <string name="session_results">Results</string>
    <string name="results_waiting_msg">You must wait for the others to vote\nCome back later!</string>
    <string name="failed_tv">You didn\'t match in any of the movies</string>
    <string name="vote_again_msg">You didn\'t match any of the movies. Would you like to vote some more?</string>
    <string name="vote_again_positive">Yes</string>
    <string name="vote_again_negative">No</string>
    <string name="close_session">Close Session</string>
    <string name="session_already_exists">You have another session opened with that user or you are no longer friends</string>

    <string name="svd_message">Get recommendation based on your previous ratings</string>
    <string name="svd_headline">Previous ratings</string>
    <string name="knn_similar">Similar movies</string>
    <string name="knn_message">Get recommendation based on a movie of your choice</string>
    <string name="profile_initialization">Profile initialization</string>
    <string name="filter">Choose filters</string>
    <string name="genre_preference_hint">What kind of movies do you like?</string>
    <string name="profile_init_finish">Finish</string>

    <string name="error_no_internet">There is no internet connection</string>
    <string name="error_network">A network error occurred</string>
    <string name="error_general">An error occurred!</string>
    <string name="error_user_insert">Could not insert user</string>
    <string name="rating_stored">Rating stored!</string>
    <string name="rating_store_err">Error while storing vote</string>
    <string name="submit_similar_movie_btn">select</string>
    <string name="no_internet_err">There is no internet connection</string>

</resources>