<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingBottom="8dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="16dp"
                app:strokeWidth="3dp"
                app:strokeColor="@color/blue_light">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="8dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_movie_filter_24"
                        app:civ_circle_background_color="@color/blue_light" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/knn_similar" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="6dp"
                        android:gravity="center"
                        android:lines="3"
                        android:maxLines="3"
                        android:text="@string/knn_message" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/knn_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/blue_light"
                        android:layout_marginVertical="4dp"
                        android:text="@string/genre_selection_start"
                        app:cornerRadius="16dp" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="16dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:strokeWidth="3dp"
                app:strokeColor="@color/blue_light">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="8dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_star_half_56"
                        app:civ_circle_background_color="@color/blue_light" />


                    <com.google.android.material.textview.MaterialTextView
                        style="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/svd_headline" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="6dp"
                        android:gravity="center"
                        android:lines="3"
                        android:maxLines="3"
                        android:text="@string/svd_message" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/svd_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/blue_light"
                        android:layout_marginVertical="4dp"
                        android:text="@string/genre_selection_start"
                        app:cornerRadius="16dp" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
</layout>