<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="genresPreferencesFragment"
            type="com.uniwa.moviender.ui.fragment.GenresPreferencesFragment" />
        <variable
            name="viewModel"
            type="com.uniwa.moviender.ui.viewmodel.GenresPreferencesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.SessionGenresFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/genre_header_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:text="@string/profile_initialization"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/genre_info_tv"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre_preference_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genre_header_info"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/genre_preferences_rv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:scrollbars="vertical"
            app:genres="@{viewModel.genresList}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/finish_init_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/genre_info_tv"
            tools:listitem="@layout/genre_item" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/finish_init_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.98"
            android:gravity="center"
            android:onClick="@{() -> genresPreferencesFragment.finishInitialization()}"
            android:text="@string/genre_selection_start"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>